# jinglib

./: CMakeLists.txt  Doxyfile  README.md
inc/: calculate_cell_side_length.cpp  function_time.h  half_edge.h  hash_key.h  manifold_check.h  rational_number.h  rational_vec.h  read_model.h  remove_duplicate_verts.h  tet_hex_interpolation.h  watertight_check.h  write_model.h
inc/aabb/: aabb_tree.h  aabb_tree.hpp
inc/model_check/: manifold_check.hpp
shader/shader/: display.cpp
src/: CMakeLists.txt  half_edge.cpp  rational_number.cpp  rational_vec.cpp  watertight_check.cpp
