SET(rn_src rational_number.cpp)

ADD_LIBRARY(rn ${rn_src})
TARGET_INCLUDE_DIRECTORIES(
  rn PUBLIC /usr/local/include ${CMAKE_SOURCE_DIR}/inc/rational_number)
TARGET_LINK_DIRECTORIES(rn PUBLIC /usr/local/lib)
TARGET_LINK_LIBRARIES(rn PUBLIC gmpxx gmp)


ADD_EXECUTABLE(rn_test rational_number_test.cpp)
TARGET_LINK_LIBRARIES(rn_test rn)
SET_TARGET_PROPERTIES(rn_test
  PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

SET(rv_src rational_vec.cpp)
ADD_LIBRARY(rv ${rv_src})
TARGET_LINK_LIBRARIES(rv PUBLIC rn)

ADD_EXECUTABLE(rv_test rational_vec_test.cpp)
TARGET_LINK_LIBRARIES(rv_test rv)
SET_TARGET_PROPERTIES(rv_test
  PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
